# claude-meter

./: .gitignore  LICENSE  README.md  clock_push.py  clock_push_photo.py  install.sh  pyproject.toml  requirements.txt
docs/: DEVICE_NOTES.md
src/claude_meter/: __main__.py  auth.py  cli.py  config.py  loop.py  service.py  usage.py
src/claude_meter/renderers/: __init__.py  gif80.py  photo240.py
src/claude_meter/services/: launchd.plist.template  systemd.service.template
src/claude_meter/transports/: __init__.py  geekmagic.py
